(feat) Describe the api response in api-response-spec and write some initial API interaction. Not sure what's next, not sure where I'm going with this.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
+    "ramda": "^0.22.1"
+  }
 }
